# industrial-kg-multi-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.test.yml  entrypoint.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json  turbo.json
apps/agent/: Directory.Packages.props  IndustrialKgAgent.csproj  IndustrialKgAgent.slnx  Program.cs  main.py  pyproject.toml  serve.py
apps/agent/Agents/: TodosAgent.cs
apps/agent/Config/: Settings.cs
apps/agent/Prompts/: SystemPrompt.cs
apps/agent/Tools/: A2uiDynamicSchema.cs  A2uiFixedSchema.cs  A2uiOperations.cs  QueryTool.cs  TodosTool.cs
apps/agent/src/: a2ui_dynamic_schema.py  config.py  scheduling.py
apps/agent/src/Application/: IndustrialKgAgent.Application.csproj
apps/agent/src/Application/Tools/: A2uiDynamicSchemaTool.cs  A2uiFixedSchemaTool.cs  QueryTool.cs  TodosTool.cs
apps/agent/src/Domain/A2ui/: A2uiDesignException.cs  A2uiOperations.cs  IA2uiDesigner.cs
apps/agent/src/Domain/Flights/: Flight.cs  IFlightSchemaProvider.cs
apps/agent/src/Domain/Ledger/: ILedgerRepository.cs  LedgerRow.cs
apps/agent/src/Domain/Todos/: ITodoStore.cs  Todo.cs
apps/agent/src/Host/: IndustrialKgAgent.Host.csproj  Program.cs  appsettings.json.example
apps/agent/src/Host/Properties/: launchSettings.json
apps/agent/src/IndustrialKgAgent.Application/: IndustrialKgAgent.Application.csproj
apps/agent/src/IndustrialKgAgent.Application/Prompts/: SystemPrompt.cs
apps/agent/src/IndustrialKgAgent.Application/Tools/: A2uiDynamicSchemaTool.cs
apps/agent/src/IndustrialKgAgent.Host/: IndustrialKgAgent.Host.csproj
apps/agent/src/IndustrialKgAgent.Infrastructure/: IndustrialKgAgent.Infrastructure.csproj
apps/agent/src/Infrastructure/: GlobalUsings.cs  IndustrialKgAgent.Infrastructure.csproj
apps/agent/src/prompts/: system.j2
apps/agent/tests/IndustrialKgAgent.Tests/: IndustrialKgAgent.Tests.csproj
docker/: Dockerfile.agent  Dockerfile.app
(+71 files in other folders)
