# Virtual uv workspace root (no [project] — the root ships no Python code).
# The single uv.lock here locks every member's dependencies together.
# Add future Python packages (shared libs, eval harness) under apps/ or
# packages/ and list them as members.
[tool.uv.workspace]
members = ["apps/agent"]

[dependency-groups]
dev = [
  "pre-commit>=4.6.0",
  "ruff>=0.15.17",
]
