[project]
name = "sample-agent"
version = "0.1.0"
description = "A LangGraph agent"
requires-python = ">=3.14"
dependencies = [
  "langchain==1.2.15",
  "langgraph==1.1.6",
  "langsmith==0.7.33",
  "openai==1.109.1",
  "fastapi>=0.115.5,<1.0.0",
  "uvicorn>=0.29.0,<1.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "langchain-openai==1.1.9",
  "copilotkit==0.1.94",
  "jinja2>=3.1",
  "ag-ui-protocol==0.1.18",
  "langchain-anthropic==1.4.1",
  # serve.py (Docker): AG-UI wrapper used when langgraph-cli is unavailable
  "ag-ui-langgraph[fastapi]>=0.0.37",
]

[dependency-groups]
dev = [
  # langgraph dev server — requires Docker-in-Docker; excluded from Docker images
  "langgraph-cli[inmem]==0.4.21",
  "langgraph-api==0.7.101",
]
