[project]
name = "sample-agent"
version = "0.1.0"
description = "A LangGraph agent"
requires-python = ">=3.14"
dependencies = [
  "langchain==1.3.10",
  "langgraph==1.2.6",
  "langsmith==0.8.18",
  "fastapi>=0.115.5,<1.0.0",
  "uvicorn>=0.29.0,<1.0.0",
  "pydantic-settings>=2.7,<3",
  "langchain-openai==1.3.2",
  "copilotkit==0.1.94",
  "jinja2>=3.1",
  "ag-ui-protocol==0.1.19",
  "langchain-anthropic==1.4.6",
  # serve.py (Docker): AG-UI wrapper used when langgraph-cli is unavailable
  "ag-ui-langgraph[fastapi]>=0.0.42",
]

[dependency-groups]
dev = [
  # langgraph dev server — requires Docker-in-Docker; excluded from Docker images
  "langgraph-cli[inmem]==0.4.30",
  "langgraph-api==0.10.0",
]
